# oslo.context

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  examples.rst  index.rst  installation.rst  usage.rst
doc/source/api/: autoindex.rst  index.rst  oslo_context.tests.test_context.rst
doc/source/examples/: usage.py  usage_simple.py  usage_user_identity.py
doc/source/install/: index.rst
doc/source/user/: examples.rst  usage.rst
doc/source/user/examples/: usage.py  usage_simple.py  usage_user_identity.py
oslo_context/: context.py  fixture.py  version.py
oslo_context/tests/: test_context.py  test_fixture.py
releasenotes/notes/: Fix-system-scope-from_dict-29615af90723ba4d.yaml  deprecate-version-module-b47fc41720b5b49f.yaml  drop-python27-support-b421329839e69d41.yaml  redacted-copy-efd02c83c287451f.yaml  remove-deprecated-args-044bc6bd79638988.yaml  remove_deprecated_args_tenant-77724de1422f46d9.yaml
releasenotes/source/: conf.py  index.rst
tests/: test_context.py
