[metadata]
name = oslo.context
summary = Oslo Context library
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/oslo.context/latest/
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    oslo_context

[mypy]
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
disallow_untyped_defs = true

[mypy-oslo_context.tests.*]
ignore_errors = true
